<resources>
    <string name="app_name">رهنما</string>
    <string name="txtmsg">-3آیا خانواده شما , در حال حاضر داری خودرو می باشد ؟</string>
    <string name="yes">داریم</string>
    <string name="no">نداریم</string>
    <string name="car">خودروی سواری</string>
    <string name="truck">خودروی وانت</string>
    <string name="count">تعداد</string>
    <string name="chcarno">تا به حال خودرو نداشته ایم</string>
    <string name="chcaryes">در حال حاظر خودرو نداریم</string>
    <string name="btncheck3">مرحله بعد</string>
    <string name="nameandfamily2">نام و نام خانوادگی تصمیم گیرنده</string>
    <string name="telnum2">شماره تماس الزامی</string>
    <string name="address2">آدرس</string>
    <string name="msg8">کدام یک از عوامل زیر بیشترین تاثیر را در عدم تمایل شما به خرید خودرو نو و تعویض خودرو فعلی دارد ؟</string>
    <string-array name="qt8">
        <item>عدم امکان تامين نقدينگی لازم برای خريد خودرو نو</item>
        <item>عدم توانايي پرداخت اقساط در روشهای فروش فعلی</item>
        <item>هزينه پايين نگهداری خودروی فعلی</item>
        <item> رضایت از خودرو فعلی</item>
        <item>عدم وجود خودروی مناسب با سطح بودجه و توان خرید من</item>
        <item>مناسب نبودن شرايط فروش اقساطی</item>
        <item>مناسب نبودن شرايط طرح جايگزينی خودروهای فرسوده</item>
    </string-array>
    <string name="otherlast8">سایر موارد</string>
    <string name="msgothers8">لطفا ذکر شود.</string>
    <string name="question6">6- آیا در طول یکسال گذشته قصد خرید خودرو را داشته اید ؟</string>
    <string name="f1s6_radiobutton1">بله داشتم و خریداری کردم</string>
    <string name="f1s6_radiobutton2">بله داشتم و نخریدم </string>
    <string name="f1s6_radiobutton3">نداشتم و خریدم</string>
    <string name="f1s6_msg">قصد خرید چه خودرویی را داشتید ؟</string>
    <string-array name="f1_spinner"></string-array>
    <string-array name="f1_spinner1">
        <item>بنر</item>
        <item>مرسدس</item>
        <item>آئودی</item>
        <item>نیسان</item>
        <item>ولوو</item>
    </string-array>
    <string-array name="f1_spinner2">
        <item>مرسدس</item>
        <item>مرسدس</item>
        <item>مرسدس</item>
        <item>مرسدس</item>
        <item>مرسدس</item>
    </string-array>
    <string-array name="f1_spinner3">
        <item>پیکان</item>
        <item>پیکان</item>
        <item>پیکان</item>
        <item>پیکان</item>
        <item>پیکان</item>
    </string-array>
    <string name="f1s6_txt">مارک</string>
    <string name="f1s6_txt2">مدل</string>
    <string name="f1s6_txt3">تیپ</string>
    <string name="f1s6_txt4">نو</string>
    <string name="f1s6_txt5">دست دوم</string>
    <string-array name="f1_spinner4">
        <item>بنر</item>
        <item>بنر</item>
        <item>بنر</item>
        <item>بنر</item>
        <item>بنر</item>
    </string-array>
    <string-array name="f1_spinner5">
        <item>بنر</item>
        <item>بنر</item>
        <item>بنر</item>
        <item>بنر</item>
        <item>بنر</item>
    </string-array>
    <string-array name="f1_spinner6">
        <item>بنر</item>
        <item>بنر</item>
        <item>بنر</item>
        <item>بنر</item>
        <item>بنر</item>
    </string-array>
    <string name="f1s6_txt8">چه زمانی ؟</string>
    <string name="f1s6_txt9">بهای خرید ؟</string>
    <string name="f1s7text">7- آیا خانواده شما قصد خرید یا تعویض خودرو در آینده را دارد ؟ (حداکثر دو خودرو با الویت بالاتر خرید و دارای نوع متفاوت در نظر گرفته شوند)</string>
    <string-array name="f1s7v1">
        <item>لطفا انتخاب کنید</item>
        <item>تا شش ماه آینده</item>
        <item>بین شش ماه تا یکسال آینده</item>
        <item>بین یک تا دو سال اینده</item>
        <item>بیش از دو سال اینده</item>
        <item>اصلا قصد ندارم</item>
    </string-array>
    <string-array name="f1s7v2">
        <item>لطفا انتخاب کنید</item>
        <item>سواری</item>
        <item>وانت</item>
        <item>ون</item>
        <item>سایر موارد</item>
    </string-array>
    <string-array name="f1s7v4">
        <item>نو</item>
        <item>دست دوم</item>
    </string-array>
    <string-array name="f1s7v6">
        <item>نقدی</item>
        <item>اقساطی</item>
    </string-array>
    <string-array name="f1s8v1">
        <item>عدم امکان تامين نقدينگی لازم برای خريد خودرو نو</item>
        <item>عدم توانايي پرداخت اقساط در روشهای فروش فعلی</item>
        <item>هزينه پايين نگهداری خودروی فعلی</item>
        <item> رضایت از خودرو فعلی</item>
        <item>عدم وجود خودروی مناسب با سطح بودجه و توان خرید من</item>
        <item>مناسب نبودن شرايط فروش اقساطی</item>
        <item>مناسب نبودن شرايط طرح جايگزينی خودروهای فرسوده</item>
        <item>سایر موارد</item>
    </string-array>
    <string-array name="f1s9v1">
        <item>کاهش ميزان پرداخت نقدی در روش خرید اقساطی</item>
        <item>افزايش دوره بازپرداخت اقساط </item>
        <item>کاهش نرخ بهره تسهيلات دريافتی</item>
        <item>تسهيل شرايط دريافت وام (ارائه سفته به جای ضامن يا چک)</item>
        <item> ورود خودروهای جديد به بازار</item>
        <item>ساير (لطفا ذکر شود)</item>
    </string-array>
    <string-array name="f1s10v1">
        <item>دوره بازپرداخت اقساط2 ساله ، ميزان پرداخت نقدی 30%</item>
        <item>دوره بازپرداخت اقساط3 ساله ، ميزان پرداخت نقدی 40% </item>
        <item>دوره بازپرداخت اقساط4 ساله ، ميزان پرداخت نقدی 50%</item>
    </string-array>
    <string-array name="f1s11v1">
        <item> تعويض خودروی فعلی با خودروی نو</item>
        <item> تعويض خودروی فعلی با خودروی دست دوم کم کارکرد از بازار آزاد</item>
        <item> تعويض خودروی فعلی با خودروی دست دوم کم کارکرد از شرکت های خودروساز(خودرو دست دوم با گارانتی محدود/6 ماهه)</item>
        <item> تحت هيچ شرايطي تمايل به تعويض خودروی فعلی ندارم.</item>
    </string-array>
    <string-array name="f1s4v1">
        <item>سواری</item>
        <item>وانت</item>
        <item>ون</item>
        <item>سایر</item>
    </string-array>
    <string-array name="brand">
        <item>ایران خودرو</item>
        <item>بنز</item>
        <item>آئودی</item>
        <item>هیوندا</item>
    </string-array>
    <string-array name="model">
        <item>ایران خودرو</item>
        <item>بنز</item>
        <item>آئودی</item>
        <item>هیوندا</item>
    </string-array>
    <string-array name="tip">
        <item>ایران خودرو</item>
        <item>بنز</item>
        <item>آئودی</item>
        <item>هیوندا</item>
    </string-array>
    <string-array name="fuel">
        <item>لطفا انتخاب کنید.</item>
        <item>بنزینی</item>
        <item>بنزین و گاز</item>
        <item>گازوئیل</item>
        <item>هیبریدی</item>
        <item>برقی</item>
    </string-array>
    <string-array name="type">
        <item>لطفا انتخاب کنید.</item>
        <item>دستی</item>
        <item>اتوماتیک</item>
    </string-array>
    <string-array name="qt5">
        <item>کمتر از 300 هزار تومان</item>
        <item>بين 300 تا 500 هزار تومان</item>
        <item>بين 500 هزار تومان تا يک ميليون تومان</item>
        <item>بيشتر از يک ميليون تومان، لطفا ميزان هزينه ذکر شود</item>
    </string-array>
    <string-array name="cit">
        <item>استان تهران</item>
        <item>استان اصفهان</item>
        <item>استان خراسان رضوی</item>
        <item>استان فارس</item>
        <item>استان آذربایجان شرقی</item>
        <item>استان خوزستان</item>
        <item>استان گیلان</item>
        <item>استان کرمان</item>
        <item>استان همدان</item>
        <item>استان کرمانشاه</item>
        <item>استان بوشهر</item>
        <item>استان مازنداران</item>
    </string-array>
    <string-array name="city"></string-array>
    <string-array name="city0">
        <item>تهران</item>
    </string-array>
    <string-array name="city1">
        <item>اصفهان</item>
    </string-array>
    <string-array name="city2">
        <item>مشهد</item>
    </string-array>
    <string-array name="city3">
        <item>شیراز</item>
    </string-array>
    <string-array name="city4">
        <item>تبریز</item>
    </string-array>
    <string-array name="city5">
        <item>اهواز</item>
    </string-array>
    <string-array name="city6">
        <item>رشت</item>
    </string-array>
    <string-array name="city7">
        <item>کرمان</item>
    </string-array>
    <string-array name="city8">
        <item>همدان</item>
    </string-array>
    <string-array name="city9">
        <item>کرمانشاه</item>
    </string-array>
    <string-array name="city10">
        <item>بوشهر</item>
    </string-array>
    <string-array name="city11">
        <item>ساری</item>
    </string-array>
    <string-array name="state"></string-array>
    <string-array name="state1">
        <item>شهرضا</item>
    </string-array>
    <string-array name="state2">
        <item>نیشابور</item>
    </string-array>
    <string-array name="state3">
        <item>فسا</item>
    </string-array>
    <string-array name="state4">
        <item>مراغه</item>
    </string-array>
    <string-array name="state5">
        <item>دزفول</item>
    </string-array>
    <string-array name="state6">
        <item>انزلی</item>
    </string-array>
    <string-array name="state7">
        <item>بم</item>
    </string-array>
    <string-array name="state8">
        <item>ملایر</item>
    </string-array>
    <string-array name="state9">
        <item>اسلام آباد غرب</item>
    </string-array>
    <string-array name="state10">
        <item>دشتستان</item>
    </string-array>
    <string-array name="state11">
        <item>نوشهر</item>
    </string-array>
    <string-array name="company">
        <item>ایران خودرو</item>
        <item>سایپا</item>
        <item>پارس خودرو</item>
        <item>کرمان خودرو</item>
        <item>کارمانیا</item>
        <item>گروه بهمن</item>
        <item>مدیران خودرو</item>
        <item>ام‌جی پارس</item>
        <item>آسام موتور</item>
        <item>اطلس خودرو</item>
        <item>نگین خودرو</item>
        <item>ایرتویا</item>
        <item>ستاره ایران</item>
        <item>معین خودرو</item>
        <item>پرشیا خودرو</item>
        <item>جهان نوین آریا</item>
        <item>رامک خودرو</item>
        <item>مدیا موتور</item>
        <item>آلفا موتور</item>
        <item>آرتا تک موتور</item>
        <item>افرا موتور</item>
        <item>گلرنگ موتور فامیلی</item>
        <item>آرین موتور</item>
    </string-array>
    <string-array name="company_vanet">
        <item>ایران خودرو</item>
        <item>سایپا</item>
        <item>زامیاد</item>
        <item>پارس خودرو</item>
        <item>گروه بهمن</item>
    </string-array>
    <string-array name="tiy">
        <item>ایکو</item>
        <item>رنو</item>
        <item>فوتون</item>
    </string-array>
    <string-array name="tiy_1">
        <item>سایپا</item>
    </string-array>
    <string-array name="tiy_2">
        <item>زامیاد</item>
    </string-array>
    <string-array name="tiy_3">
        <item>دانگ فنگ</item>
    </string-array>
    <string-array name="tiy_4">
        <item>بهمن</item>
        <item>کاپرا</item>
    </string-array>
    <string-array name="th">
        <item>وانت آریسان دوگانه‌ سوز</item>
    </string-array>
    <string-array name="th_1">
        <item>رنو تندر پیکاپ</item>
    </string-array>
    <string-array name="tip32">
        <item>وانت فوتون دوکابین فوتون دیزلی</item>
        <item>وانت فوتون دوکابین فوتون بنزینی</item>
    </string-array>
    <string-array name="tip33">
        <item>پراید 151 SE</item>
    </string-array>
    <string-array name="tip44">
        <item>وانت زامیاد 24</item>
        <item>وانت زامیاد 24 گازسوز</item>
        <item>وانت زامیاد 24 دیزل</item>
        <item>وانت پادرا انژکتوری PE6</item>
    </string-array>
    <string-array name="tip55">
        <item>وانت کارا 2000 - تک کابین</item>
        <item>وانت کارا 2000 - دو کابین </item>
        <item>وانت کاپرا2 دوکابین . دو دیفرانسیل</item>
    </string-array>
    <string-array name="t_1">
        <item>23,335,050</item>
        <item>31,570,950</item>
    </string-array>
    <string-array name="t_2">
        <item>30,239,600</item>
        <item>40,912,400</item>
    </string-array>
</resources>