<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".form1.f1s2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <include
        layout="@layout/title_form1"
        />



    <LinearLayout
        android:padding="@dimen/padding_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/divider"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="2-در صورت امکان مشخصات و تلفن فردی از خانواده که تصمیم گیرنده اصلی می باشد , رااعلام نمایید. در غیر این صورت به مصاحبه خاتمه داده شود."/>

        <EditText
            android:id="@+id/f1s2v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameandfamily2"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/f1s2v2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telnum2"
            android:maxLength="12"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/f1s2v3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/address2" />

        <Button
            android:id="@+id/btnclicks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="مرحله بعد" />


    </LinearLayout>
    </LinearLayout>
</ScrollView>
